--- a/ASP.NET Fundamentals/Workshop TaskBoard App/TaskBoard.App/TaskBoardApp.Web.ViewModels/TaskBoardApp.Web.ViewModels.csproj
+++ b/ASP.NET Fundamentals/Workshop TaskBoard App/TaskBoard.App/TaskBoardApp.Web.ViewModels/TaskBoardApp.Web.ViewModels.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TaskboardApp.Common\TaskboardApp.Common.csproj" />
+  </ItemGroup>
+
 </Project>
