--- a/ASP.NET Fundamentals/Workshop TaskBoard App/TaskBoard.App/TaskBoard.App/TaskBoard.App.csproj
+++ b/ASP.NET Fundamentals/Workshop TaskBoard App/TaskBoard.App/TaskBoard.App/TaskBoard.App.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TaskBoardApp.Data.Models\TaskBoardApp.Data.Models.csproj" />
     <ProjectReference Include="..\TaskBoardApp.Data\TaskBoardApp.Data.csproj" />
     <ProjectReference Include="..\TaskBoardApp.Services\TaskBoardApp.Services.csproj" />
     <ProjectReference Include="..\TaskBoardApp.Web.ViewModels\TaskBoardApp.Web.ViewModels.csproj" />
