--- a/ASP.NET Fundamentals/Exams/C# Web Development Basics Exam - 17 June 2023/Services/Services.csproj
+++ b/ASP.NET Fundamentals/Exams/C# Web Development Basics Exam - 17 June 2023/Services/Services.csproj
@@ -1,15 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>aspnet-Homies-8ac028cf-5b5c-4d0d-b379-c55872e97625</UserSecretsId>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Data.Models\Data.Models.csproj" />
     <ProjectReference Include="..\Data\Data.csproj" />
-    <ProjectReference Include="..\Services\Services.csproj" />
     <ProjectReference Include="..\ViewModels\ViewModels.csproj" />
   </ItemGroup>
 
